[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }               # Axum web framework
tokio = { version = "1.25.0", features = ["full"] } # Async runtime
serde = { version = "1", features = ["derive"] } # Serialization/deserialization
serde_json = "1.0"         # For handling JSON
tower = "0.4"
thiserror = "1.0.64"
config = "0.14.0"              # Middleware and utilities for Axum
once_cell = "1"
tracing = "0.1.41"             # For structured logging

http = "1.2.0"
bytes = "1.2.1"
http-body = "1.0.1"
tracing-subscriber = "0.3.18"
hyper = "1.5.2"

tower-http = { version = "0.6.2", features = ["trace"] }
tower-request-id = "0.2.0"

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }